kubenetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acc-manager-service
  namespace: dev

spec:
  selector:
    app: account-manager-app

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
