kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acc-manager-ingress
  namespace: dev

spec:
  rules:
  - host: accmanager.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acc-manager-service
            port:
              number: 80
